Big Update (See Description)
-Changed module name of "SceneSpace" per "Scene1"

-Added Room 1, deleted old space scene

-Changed player: Deleted the ship and added the Idara's character (the image is temporary, must be improved and dwarfed) with all that takes (animation changes, shooting positions,...)

-Changed Screen Width and Height by the ones stated in GDD (384x240) and Screen Size (from 3 to 2) because of accomodation to my PC

-Added Wall colliders and changed the interaction with COLLIDER_PLAYER (now wall doesn't destruct player and the player can only move between room boundaries)

-Changed player collider, adapted to Idara

--- a/SDL8_Handout/SDL Game.vcxproj.filters
+++ b/SDL8_Handout/SDL Game.vcxproj.filters
@@ -71,9 +71,6 @@
     <ClInclude Include="ModuleSceneIntro.h">
       <Filter>Modules\Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="ModuleSceneSpace.h">
-      <Filter>Modules\Scenes</Filter>
-    </ClInclude>
     <ClInclude Include="ModuleInput.h">
       <Filter>Modules\Base\Controllers</Filter>
     </ClInclude>
@@ -94,6 +91,9 @@
     </ClInclude>
     <ClInclude Include="ModuleWindow.h">
       <Filter>Modules\Base\Initializing</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleScene1.h">
+      <Filter>Modules\Scenes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -118,9 +118,6 @@
     <ClCompile Include="ModuleSceneIntro.cpp">
       <Filter>Modules\Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="ModuleSceneSpace.cpp">
-      <Filter>Modules\Scenes</Filter>
-    </ClCompile>
     <ClCompile Include="ModuleInput.cpp">
       <Filter>Modules\Base\Controllers</Filter>
     </ClCompile>
@@ -141,6 +138,9 @@
     </ClCompile>
     <ClCompile Include="ModuleWindow.cpp">
       <Filter>Modules\Base\Initializing</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleScene1.cpp">
+      <Filter>Modules\Scenes</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
