--- a/SDL8_Handout/SDL Game.vcxproj.filters
+++ b/SDL8_Handout/SDL Game.vcxproj.filters
@@ -36,6 +36,9 @@
     <Filter Include="Modules\Enemies\Enemy Types">
       <UniqueIdentifier>{369e13c9-038e-4697-b867-4a7b41e3e1bf}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Modules\Enemies\Enemy Types\Room1">
+      <UniqueIdentifier>{bff71028-5722-4d13-96ea-f77f1e137458}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Module.h">
@@ -95,6 +98,9 @@
     <ClInclude Include="ModuleScene1.h">
       <Filter>Modules\Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="EnemyRapier.h">
+      <Filter>Modules\Enemies\Enemy Types\Room1</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -141,6 +147,9 @@
     </ClCompile>
     <ClCompile Include="ModuleScene1.cpp">
       <Filter>Modules\Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyRapier.cpp">
+      <Filter>Modules\Enemies\Enemy Types\Room1</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
