--- a/SDL8_Handout/SDL Game.vcxproj
+++ b/SDL8_Handout/SDL Game.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="EnemyBile.h" />
     <ClInclude Include="EnemyCranberry.h" />
     <ClInclude Include="EnemyRapier.h" />
     <ClInclude Include="Globals.h" />
@@ -95,6 +96,7 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyBile.cpp" />
     <ClCompile Include="EnemyCranberry.cpp" />
     <ClCompile Include="EnemyRapier.cpp" />
     <ClCompile Include="Globals.cpp" />
